<resources>
    <string name="app_name">MyQuizApp</string>
    <string name="please_enter_your_name">Please Enter Your Name.</string>
    <string name="ank">e.g. Anurag</string>
    <string name="start">Start</string>
    <string name="welcome">Welcome</string>
    <string name="quiz_app">Quiz App!</string>
    <string name="e_g_anurag">e.g. Anurag</string>
    <string name="quiz_image">Quiz Image</string>
    <string name="submit">SUBMIT</string>
    <string name="your_score_is_9_out_of_10">Your Score is 9 Out Of 10</string>
    <string name="finish">FINISH</string>
    <string name="image">image</string>
</resources>