<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/firstbackground"
    tools:context=".MainActivity">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quiz_app"
        android:layout_marginBottom="30dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/white"
        />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="30dp"
        android:background="@color/white"
        >
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
        android:background="@color/white"
        >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="#363A43"
        />
        <TextView
            android:id="@+id/TextTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_your_name"
            android:layout_margin="16sp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="#7A8089"
            />
   <com.google.android.material.textfield.TextInputLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
       android:layout_margin="20dp"
       >

       <androidx.appcompat.widget.AppCompatEditText
           android:id="@+id/hindName"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/e_g_anurag"
           android:inputType="textCapWords"
           android:textColor="#363A43"
           android:textColorHint="#7A8089"

           tools:ignore="SpeakableTextPresentCheck">

       </androidx.appcompat.widget.AppCompatEditText>

       </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/ButtonInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/design_default_color_on_primary"
            android:text="@string/start"
            android:textColor="#757575"
            android:textSize="18sp">
        </Button>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>
